--- a/client/src/Pages/Step1/step1.css
+++ b/client/src/Pages/Step1/step1.css
@@ -8,8 +8,12 @@
 }
 ul{
     list-style: none;
+    padding: 0;
     text-align: start;
 }
 li{
+    text-align: start;
+}
+.columns {
     text-align: start;
 }
