--- a/client/src/Pages/Step1/step1.css
+++ b/client/src/Pages/Step1/step1.css
@@ -1,11 +1,23 @@
 .step1{
-    /* background-image: url("https://images.unsplash.com/photo-1576091160399-112ba8d25d1d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8aGVhbHRoY2FyZXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60");
-    color: rgb(250, 249, 248);
+    background-image: url("background1.jpg");
+    height: 100%;
+
+  /* Create the parallax scrolling effect */
+  /* background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover; */
+    /* color: rgb(250, 249, 248); */
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-    background-size: cover; */
+    background-size: cover;
 }
+@media only screen and (max-device-width: 1366px) {
+    .step1 {
+      background-attachment: scroll;
+    }
+  }
 .step{
  border:2px solid rgb(184, 181, 181);
  border-radius: 10px;
@@ -26,10 +38,12 @@ li{
     text-align: start;
 }
 .bannertitle{
-    font-weight: 400;
+    font-weight: 800;
     font-size: 3em;
 }
 .infobox{
     border:1px solid black;
     border-radius: 10px;
+    /* background-color: ; */
+/* #00ffac */
 }
