--- a/client/src/Pages/Step1/step1.css
+++ b/client/src/Pages/Step1/step1.css
@@ -27,7 +27,7 @@
 }
 #head1{
     font-weight: 600;
-    font-size: 10%;
+    font-size: 2em;
 }
 ul{
     list-style: none;
@@ -50,4 +50,27 @@ li{
 } */
 #translogo{
     width: 500px;
+}
+.bodd{
+    padding: 5px;
+    padding-top: 15px;
+    color: #033D68;
+    font-family: 'Zilla Slab', serif;
+    font-size: 20px;
+    font-weight: 550;
+}
+#head2{
+    text-align: center;
+    padding-top: 20px;
+    font-size: 40px;
+}
+.container{
+    color: #033D68;   
+}
+.pad{
+    height: 500px;
+}
+#adult{
+    margin-top: 150px;
+    margin-left: 300px;
 }
