--- a/client/src/Pages/Step1/step1.css
+++ b/client/src/Pages/Step1/step1.css
@@ -74,3 +74,16 @@ li{
     margin-top: 150px;
     margin-left: 300px;
 }
+.bbutton {
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.8);
+    padding: 15px 40px;
+    border-radius: 4px;
+    font-weight: normal;
+    text-transform: uppercase;
+    transition: all 0.2s ease-in-out;
+  }
+.glow-button:hover {
+    color: rgba(255, 255, 255, 1);
+    box-shadow: 0 5px 15px rgba(145, 92, 182, .4);
+  }
