--- a/client/src/Pages/Step1/step1.css
+++ b/client/src/Pages/Step1/step1.css
@@ -61,7 +61,7 @@ li{
 }
 #head2{
     text-align: center;
-    padding-top: 20px;
+    padding-top: 10px;
     font-size: 40px;
 }
 .container{
@@ -71,19 +71,21 @@ li{
     height: 500px;
 }
 #adult{
-    margin-top: 150px;
-    margin-left: 300px;
+    margin-top: 100px;
 }
-.bbutton {
-    text-decoration: none;
-    color: rgba(255, 255, 255, 0.8);
-    padding: 15px 40px;
-    border-radius: 4px;
-    font-weight: normal;
-    text-transform: uppercase;
-    transition: all 0.2s ease-in-out;
-  }
-.glow-button:hover {
-    color: rgba(255, 255, 255, 1);
-    box-shadow: 0 5px 15px rgba(145, 92, 182, .4);
-  }
+.choice{
+    height: 300px;
+}
+.hov{
+    filter: grayscale(100%);
+    filter: contrast(50%);
+    transition: 1s;
+}
+.hov:hover{
+    filter: grayscale(0%);
+    filter: contrast(100%);
+}
+#head{
+    padding-top: -20px !important;
+    padding-bottom: 20px;
+}
