--- a/client/src/Components/SypmtomCard/symptom.css
+++ b/client/src/Components/SypmtomCard/symptom.css
@@ -1,6 +1,7 @@
 .sym{
     width: 60%;
-    padding-top: 2%;
+    /* padding-top: 2%; */
+    height: 600px;
 }
 
 .rad{
@@ -11,7 +12,7 @@
 .radio{
   flex: 1 0 auto;
   display: flex;
-  margin: 10%;
-  padding: 10% 10% 10% 0;
+  margin: 5%;
+  padding: 2% 2% 2% 0;
   align-items: center;
 }
